--- a/NavBarTest/Base.lproj/Main.storyboard
+++ b/NavBarTest/Base.lproj/Main.storyboard
@@ -102,6 +102,7 @@
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.90196078430000004" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="12t-PX-hSr" kind="relationship" relationship="viewControllers" id="zjp-Mc-dDC"/>
